welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: ';' expected but 'else' found.
		else if (estFaceMur && getMondeHauteur < diag && diag < getMondeHauteur * getMondeLargeur)
                ^Diagonal:30: error: ';' expected but 'else' found.
		else 
                ^